<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_and_mood"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/orange"
            android:id="@+id/text_view_namaresto"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/card_view_starters">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/appetizer"
                    android:contentDescription="@string/starters"
                    android:id="@+id/image_view_starters" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/starters"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/text_view_starters"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/card_view_starters"
            android:layout_marginTop="25dp"
            android:id="@+id/card_view_mains">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_course"
                    android:contentDescription="@string/mains"
                    android:id="@+id/image_view_mains" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mains"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/text_view_mains"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/card_view_mains"
            android:layout_marginTop="25dp"
            android:id="@+id/card_view_desserts">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/desserts"
                    android:contentDescription="@string/desserts"
                    android:id="@+id/image_view_desserts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/desserts"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/text_view_desserts" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view_desserts"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/our_store"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:id="@+id/text_view_loc"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_loc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/order_now"
            android:textSize="20sp"
            android:fontFamily="sans-serif-light"
            android:id="@+id/text_view_order"/>

    </RelativeLayout>
</ScrollView>