<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_dan_pesan"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:id="@+id/tv_pilih_menu_main_course"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/cv_rice">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fried_rice"
                    android:contentDescription="@string/mains"
                    android:id="@+id/iv_rice" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fried_rice"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/tv_rice"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cv_rice"
            android:layout_marginTop="25dp"
            android:id="@+id/cv_salad">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/salad"
                    android:contentDescription="@string/mains"
                    android:id="@+id/iv_salad" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/salad"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/tv_salad"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cv_salad"
            android:layout_marginTop="25dp"
            android:id="@+id/cv_beef">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/main_course"
                    android:contentDescription="@string/mains"
                    android:id="@+id/iv_beef" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/beef"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/tv_beef"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>