<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_menu_desserts"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:id="@+id/tv_pilih_menu_desserts"/>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:id="@+id/cv_brownies">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/brownies"
                    android:contentDescription="@string/desserts"
                    android:id="@+id/iv_brownies" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/brownies"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/tv_brownies"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cv_brownies"
            android:layout_marginTop="25dp"
            android:id="@+id/cv_donuts">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/donuts"
                    android:contentDescription="@string/desserts"
                    android:id="@+id/iv_donuts" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/donuts"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/tv_donuts"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/cv_donuts"
            android:layout_marginTop="25dp"
            android:id="@+id/cv_croissants">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/croissants"
                    android:contentDescription="@string/desserts"
                    android:id="@+id/iv_croissants" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/croissants"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-black"
                    android:id="@+id/tv_croissants"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</ScrollView>